DevTools: fix image resource view
This patch sets default 'flex' property for resource-view items so that
the won't shrink and overlap.

BUG=352254

Review URL: https://codereview.chromium.org/196343022

git-svn-id: svn://svn.chromium.org/blink/trunk@169416 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/resourceView.css
+++ b/front_end/resourceView.css
@@ -36,6 +36,10 @@
     display: flex;
 }
 
+.resource-view > * {
+    flex: none;
+}
+
 .resource-view.font {
     font-size: 60px;
     white-space: pre-wrap;
